--- a/style5.css
+++ b/style5.css
@@ -2,22 +2,23 @@
 	text-align: left;
 	font-weight: gras;
 	font-weight: bold;
+	margin-left: 50px;
+
 	
 }
 
 .body{
-	width:1000px ;
-	height: 500px;
+	width:75%;
+	height:75vh;
 	border: solid ;
 	background-color:  skyblue;
+	margin-left: 50px;
 
-	
 	
 }
 
 #idaside{
 	
-	text-align: ;
 	text-indent: 20px;
 	font-weight: bold;
 }
@@ -26,7 +27,7 @@
 	
 	border: solid;
 	width: 190px;
-	height: 430px;
+	height: 68vh;
 	margin-right: 40px;
 	margin-left: 20px;
 	text-indent: 20px;
@@ -41,13 +42,12 @@
 
 .section{
 	border: solid;
-	width: 720px;
-	height: 430px;
-	margin-left: 190px;
+	width: 60%;
+	height: 68vh;
 	position: absolute;
-	top: 100px;
-	right: 250px;
-	left: ;
+	top: 110px;
+	left: 250px;
+
 }
 
 #idheader{
@@ -58,8 +58,8 @@
 .header{
 	border: solid;
 	position: absolute;
-	width: 690px;
-	height: 50px;
+	width: 95%;
+	height: 10%;
 	top: 40px;
 	margin-left: 20px;
 }
@@ -73,8 +73,8 @@
 .article1{
 	border: solid;
 	position: absolute;
-	width: 210px;
-	height: 270px;
+	width: 290px;
+	height: 50vh;
 	margin-left: 20px;
 	top: 140px;
 
@@ -83,16 +83,16 @@
 #idarticle2{
 	position: absolute;
 	top: 100px;
-	margin-left: 320px;
+	margin-left: 460px;
 	font-weight: bold;
 }
 
 .article2{
 	border: solid;
 	position: absolute;
-	width: 210px;
-	height: 270px;
-	margin-left: 260px;
+	width: 290px;
+	height: 50vh;
+	margin-left: 420px;
 	top: 140px;
 
 }
@@ -100,16 +100,16 @@
 #idarticle3{
 	position: absolute;
 	top: 100px;
-	margin-left: 540px;
+	margin-left: 810px;
 	font-weight: bold;
 }
 
 .article3{
 	border: solid;
 	position: absolute;
-	width: 210px;
-	height: 270px;
-	margin-left: 490px;
+	width: 290px;
+	height: 50vh;
+	margin-left: 780px;
 	top: 140px;
 
 }
