--- a/tp7/style7_3.css
+++ b/tp7/style7_3.css
@@ -1,18 +1,15 @@
 body{
-	margin: 0;
-	padding: 0;
-	font-family: poppins;
+	z-index: -1;
 }
-
 
 
 .header{
 	background-color: #0F056B;
 	height: 170px;
-	width: 1150px;
+	width: 2250px;
 	margin-right: 20px;
-	margin-left: 20px;
-
+	margin-left: auto;
+	text-align: center;
 }
 #id_ioc{
 	font-weight: bold;
@@ -25,72 +22,91 @@ body{
 	color: white;
 	position: absolute;
 	top: 90px;
-	margin-left: 370px;
+	margin-left: 35%;
 }
 #button{
+	height: 5%;
+	width: 5%;
 	border: salmon;
-	margin-left: 550px;
 	background-color: purple;
 	top: 140px;
 	position: absolute;
 	font-size: 20px;
+	color: white;
+	border-radius:10%;
+	margin-left: -3%;
 }
 .texte{
 	top: 120px;
-	margin-left: 350px;
+	margin-left: 25%;
+}
+
+.icon{
+	background-color: rgba(39, 35, 35, 0.5);
+	width: 60px;
+  	height: 60px;
+	align-items: center;
+  font-size: 40px;
+  color: aliceblue;
+  margin-top: -70px;
+  margin-left: 20px;
+  border-radius: 5px;
+
 }
 
 .contener{
+	background-color: white;
+	width: 550px;
+	height: 600px;
+	margin-left: 800px;
+	margin-top: -70px;
+	z-index: 999;
+	position: fixed;
+	border-radius: 2%;
 	
-	width: 700px;
-	height: 400px;
-	margin-left: 250px;
-	position: absolute;
-	top: 50px;
 
 
 }
 
 
 button{
-	border-color: violet;
-	background-color: violet;
+	
+	background-color: rgb(180, 8, 180);
 	color: white;
+	width: 70px;
+	height: 35px;
+	border-radius: 6px;
 }
 
 .signUp{
-	background-color: darkblue;
-	width: 500px;
+	background-color: rgb(33, 5, 108);
+	width: 550px;
 	height: 60px;
 	top: 10px;
-	margin-left: 70px;
+
 
 }
 
 #signUpText{
-	color: white;
+	color: rgb(255, 255, 255);
 	position: absolute;
-	margin-left: 90px;
-	top: 20px;
+	margin-left: 20px;
+	margin-top: 20px;
 	
 }
 
-.form{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left:0 ;
+/* .form{
+	
 	display: flex;
 	align-content: center;
 	align-items: center;
 	background: rgba(77, 77, 77, 0.7);
-	transition: all 0.4s;
-}
-.from:target{
+	
+} */
+/* .from:target{
 	visibility: visible;
 	opacity: 1;
-}
+} */ 
 .formcontent{
 	position: relative;
 	background: red;
@@ -98,4 +114,14 @@ button{
 	border-radius: 4px;
 	padding: 1em 2em;
 
+}
+.formulaire{
+	margin-left: 20px;
+	font-size: 20px;
+
+}
+input{
+	font-size: 18px;
+	width: 500px;
+	height: 40px;
 }
