--- a/tp7/style7_2.css
+++ b/tp7/style7_2.css
@@ -2,7 +2,7 @@
 .header{
 	background-color: #0F056B;
 	height: 170px;
-	width: 1200px;
+	width: 1500px;
 	margin-left: 130px;
 	top: 30px;
 	position: absolute;
@@ -19,11 +19,11 @@
 	color: white;
 	position: absolute;
 	top: 90px;
-	margin-left: 300px;
+	margin-left: 400px;
 }
 #button{
 	border: salmon;
-	margin-left: 520px;
+	margin-left: 720px;
 	background-color: purple;
 	top: 140px;
 	position: absolute;
@@ -42,7 +42,7 @@
 	left: 10px;
 	top: 30px;
 	width: 130px;
-	height: 800px;
+	height: 900px;
 	position: absolute;
 }
 
@@ -60,4 +60,20 @@ img{
 	top: 20px;
 	height: 70px;
 	width: 110px;
+}
+
+.icon{
+	
+	font-size: 50px;
+	color: aliceblue;
+	margin-top: -120px;
+	margin-left: 10px;
+	border-radius: 5px;
+
+}
+.contenantIcon{
+	background-color: rgba(39, 35, 35, 0.5);
+	width: 60px;
+  	height: 60px;
+	align-items: center;
 }
